--- a/.eslintignore
+++ b/.eslintignore
@@ -11,3 +11,4 @@ src/themes/colorshake-theme/components/core/blocks/MainSlider/MainSlider.vue
 src/themes/colorshake-theme/components/core/ProductsSlider.vue
 src/themes/colorshake-theme/components/core/ProductGalleryZoom.vue
 src/themes/colorshake-theme/components/core/blocks/Product/RelatedProductListing.vue
+src/themes/colorshake-theme/components/core/blocks/Auth/Register.vue
