--- a/.eslintignore
+++ b/.eslintignore
@@ -19,3 +19,5 @@ src/themes/colorshake-theme/components/core/blocks/Product/RelatedProductListing
 src/themes/colorshake-theme/components/core/blocks/Auth/Register.vue
 src/themes/colorshake-theme/layouts/Default.vue
 src/themes/colorshake-theme/components/core/blocks/Header/Header.vue
+src/themes/colorshake-theme/components/core/blocks/Blog
+src/themes/colorshake-theme/pages/Blog.vue
