Updated Colorshake config

--- a/config/colorshake_config.json
+++ b/config/colorshake_config.json
@@ -82,59 +82,63 @@
   },
   "defaultStoreCode": "",
   "storeViews": {
-    "multistore": false,
-    "mapStoreUrlsFor": ["de", "it"],
-    "de": {
-      "storeCode": "de",
-      "disabled": true,
-      "storeId": 3,
-      "name": "German Store",
-      "url": "/de",
+    "multistore": true,
+    "mapStoreUrlsFor": [
+      "pln",
+      "eur"
+    ],
+    "pln": {
+      "storeCode": "pln",
+      "disabled": false,
+      "storeId": 1,
+      "name": "Colorshake Polska",
+      "url": "/pln",
       "elasticsearch": {
         "host": "https://api.pln.colorshakestore.com/api/catalog",
-        "index": "vue_storefront_catalog_de"
+        "index": "vue_storefront_catalog"
       },
       "tax": {
-        "sourcePriceIncludesTax": false,
-        "defaultCountry": "DE",
+        "sourcePriceIncludesTax": true,
+        "defaultCountry": "PL",
         "defaultRegion": "",
         "calculateServerSide": true
       },
       "i18n": {
-        "fullCountryName": "Germany",
-        "fullLanguageName": "German",
-        "defaultLanguage": "DE",
-        "defaultCountry": "DE",
-        "defaultLocale": "de-DE",
-        "currencyCode": "EUR",
-        "currencySign": "EUR",
+        "fullCountryName": "Polska",
+        "fullLanguageName": "Polski",
+        "defaultLanguage": "PL",
+        "defaultCountry": "PL",
+        "defaultLocale": "pl-PL",
+        "currencyCode": "PLN",
+        "currencySign": " zł",
+        "currencySignPlacement": "append",
         "dateFormat": "HH:mm D-M-YYYY"
       }
     },
-    "it": {
-      "storeCode": "it",
-      "disabled": true,
-      "storeId": 4,
-      "name": "Italian Store",
-      "url": "/it",
+    "eur": {
+      "storeCode": "eur",
+      "disabled": false,
+      "storeId": 2,
+      "name": "Colorshake Europe",
+      "url": "/eur",
       "elasticsearch": {
-        "host": "https://api.pln.colorshakestore.com/api/catalog",
-        "index": "vue_storefront_catalog_it"
+        "host": "https://api.eur.colorshakestore.com/api/catalog",
+        "index": "vue_storefront_catalog"
       },
       "tax": {
-        "sourcePriceIncludesTax": false,
-        "defaultCountry": "IT",
+        "sourcePriceIncludesTax": true,
+        "defaultCountry": "PL",
         "defaultRegion": "",
         "calculateServerSide": true
       },
       "i18n": {
-        "fullCountryName": "Italy",
-        "fullLanguageName": "Italian",
-        "defaultCountry": "IT",
-        "defaultLanguage": "IT",
-        "defaultLocale": "it-IT",
+        "fullCountryName": "Europe",
+        "fullLanguageName": "English",
+        "defaultLanguage": "EN",
+        "defaultCountry": "PL",
+        "defaultLocale": "en-US",
         "currencyCode": "EUR",
-        "currencySign": "EUR",
+        "currencySign": "€ ",
         "dateFormat": "HH:mm D-M-YYYY"
       }
     }
@@ -410,7 +414,7 @@
     "max_count": 500
   },
   "externalCheckout": {
-    "cmsUrl" : "https://checkout.colorshakestore.com/pln/"
+    "cmsUrl" : "https://checkout.colorshakestore.com/"
   },
   "wordpressCms": {
     "url": "https://wordpress.colorshakestore.com"
@@ -485,3 +489,4 @@
   }
 
 }
+
