--- a/config/localheroes_config.json
+++ b/config/localheroes_config.json
@@ -199,7 +199,7 @@
     }
   },
   "entities": {
-    "optimize": true,
+    "optimize": false,
     "twoStageCaching": true,
     "optimizeShoppingCart": true,
     "category": {
