.8/flyn-master: Auto stash before merge of "1.8/flyn-master" and "origin/feat/#1-static-content-to-dynamic-wp-module"

--- a/.eslintignore
+++ b/.eslintignore
@@ -5,6 +5,7 @@ src/themes/flyn-theme/components/core/blocks/MainSlider/MainSlider.vue
 src/themes/flyn-theme/App.vue
 src/themes/flyn-theme/components/core/AddToCart.vue
 src/themes/flyn-theme/pages/Product.vue
+src/themes/flyn-theme/pages/Home.vue
 src/themes/flyn-theme/pages/ThankYou.vue
 src/themes/flyn-theme/components/core/blocks/Microcart/Microcart.vue
 src/themes/flyn-theme/components/core/ProductGalleryZoom.vue
