--- a/config/flyn_config.json
+++ b/config/flyn_config.json
@@ -369,16 +369,16 @@
     ]
   },
   "i18n": {
-    "defaultCountry": "US",
-    "defaultLanguage": "EN",
+    "defaultCountry": "PL",
+    "defaultLanguage": "PL",
     "availableLocale": ["en-US","de-DE","fr-FR","es-ES","nl-NL", "jp-JP", "ru-RU", "it-IT", "pt-BR", "pl-PL", "cs-CZ"],
-    "defaultLocale": "en-US",
-    "currencyCode": "USD",
-    "currencySign": "$",
-    "currencySignPlacement": "preppend",
+    "defaultLocale": "pl-PL",
+    "currencyCode": "PLN",
+    "currencySign": " zł",
+    "currencySignPlacement": "append",
     "dateFormat": "HH:mm D/M/YYYY",
-    "fullCountryName": "United States",
-    "fullLanguageName": "English",
+    "fullCountryName": "Polska",
+    "fullLanguageName": "Polski",
     "bundleAllStoreviewLanguages": true
   },
   "mailchimp": {
