Added Maanu config + ignore maanu-theme

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ core/resource/i18n/nl-NL.json
 core/resource/i18n/pl-PL.json
 core/resource/i18n/pt-BR.json
 core/resource/i18n/ru-RU.json
+
+src/themes/maanu-theme/
