Added external checkout url to Maanu config

--- a/config/maanu_config.json
+++ b/config/maanu_config.json
@@ -372,6 +372,9 @@
   "hotjar": {
     "id": false
   },
+  "externalCheckout": {
+    "cmsUrl" : "https://checkout.maanu.pl"
+  },
   "wordpressCms" : {
     "url": "https://wp.maanu.pl/"
   },
