--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "apollo-client": "^2.3.5",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
+    "axios": "^0.18.0",
     "bodybuilder": "2.2.13",
     "config": "^1.30.0",
     "es6-promise": "^4.2.4",
@@ -60,6 +61,7 @@
     "js-sha3": "^0.8.0",
     "localforage": "^1.7.2",
     "magento2-rest-client": "github:DivanteLtd/magento2-rest-client",
+    "node-instagram": "^4.3.0",
     "pm2": "^2.10.4",
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.5.2",
