--- a/config/maanu_config.json
+++ b/config/maanu_config.json
@@ -372,6 +372,9 @@
   "hotjar": {
     "id": false
   },
+  "facebookPixel": {
+    "id": "2396882913914745"
+  },
   "externalCheckout": {
     "cmsUrl" : "https://checkout.maanu.pl"
   },
