--- a/config/flyn_config.json
+++ b/config/flyn_config.json
@@ -255,7 +255,7 @@
     "configurableChildrenStockPrefetchDynamic": false,
     "configurableChildrenStockPrefetchStaticPrefetchCount": 8,
     "filterUnavailableVariants": false,
-    "listOutOfStockProducts": true,
+    "listOutOfStockProducts": false,
     "preventConfigurableChildrenDirectAccess": true,
     "alwaysSyncPlatformPricesOver": true,
     "clearPricesBeforePlatformSync": false,
