Enabled multistore in config

--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -83,58 +83,31 @@
   "defaultStoreCode": "",
   "storeViews": {
     "multistore": false,
-    "mapStoreUrlsFor": ["de", "it"],
-    "de": {
-      "storeCode": "de",
-      "disabled": true,
-      "storeId": 3,
-      "name": "German Store",
-      "url": "/de",
+    "mapStoreUrlsFor": ["eur"],
+    "eur": {
+      "storeCode": "eur",
+      "disabled": false,
+      "storeId": 2,
+      "name": "Kubota Europe",
+      "url": "/eur",
       "elasticsearch": {
-        "host": "https://api.pln.kubotastore.pl/api/catalog",
-        "index": "vue_storefront_catalog_de"
+        "host": "https://api.eur.kubotastore.pl/api/catalog",
+        "index": "vue_storefront_catalog_eur"
       },
       "tax": {
-        "sourcePriceIncludesTax": false,
-        "defaultCountry": "DE",
+        "sourcePriceIncludesTax": true,
+        "defaultCountry": "PL",
         "defaultRegion": "",
         "calculateServerSide": true
       },
       "i18n": {
-        "fullCountryName": "Germany",
-        "fullLanguageName": "German",
-        "defaultLanguage": "DE",
-        "defaultCountry": "DE",
-        "defaultLocale": "de-DE",
+        "fullCountryName": "Europe",
+        "fullLanguageName": "English",
+        "defaultLanguage": "EN",
+        "defaultCountry": "PL",
+        "defaultLocale": "en-US",
         "currencyCode": "EUR",
-        "currencySign": "EUR",
-        "dateFormat": "HH:mm D-M-YYYY"
-      }
-    },
-    "it": {
-      "storeCode": "it",
-      "disabled": true,
-      "storeId": 4,
-      "name": "Italian Store",
-      "url": "/it",
-      "elasticsearch": {
-        "host": "https://api.pln.kubotastore.pl/api/catalog",
-        "index": "vue_storefront_catalog_it"
-      },
-      "tax": {
-        "sourcePriceIncludesTax": false,
-        "defaultCountry": "IT",
-        "defaultRegion": "",
-        "calculateServerSide": true
-      },
-      "i18n": {
-        "fullCountryName": "Italy",
-        "fullLanguageName": "Italian",
-        "defaultCountry": "IT",
-        "defaultLanguage": "IT",
-        "defaultLocale": "it-IT",
-        "currencyCode": "EUR",
-        "currencySign": "EUR",
+        "currencySign": "€ ",
         "dateFormat": "HH:mm D-M-YYYY"
       }
     }
