--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.5.2",
     "ts-node": "^7.0.1",
+    "v-lazy-image": "^1.3.2",
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.1",
     "vue-apollo": "^3.0.0-beta.19",
