--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -251,8 +251,8 @@
       "variantsGroupAttribute": "color",
       "mergeConfigurableChildren": true,
       "imageAttributes": ["image","thumbnail","small_image"],
-      "width": 806,
-      "height": 999
+      "width": 1154,
+      "height": 1500
     },
     "filterAggregationSize": {
       "default": 10,
@@ -420,6 +420,9 @@
   },
   "checkout": {
     "url": "https://checkout.kubotastore.pl"
+  },
+  "externalCheckout": {
+    "cmsUrl" : "https://checkout.kubotastore.pl/"
   },
   "wordpressCms": {
     "url": "https://wordpress.kubotastore.pl",
