--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -421,12 +421,13 @@
   "checkout": {
     "url": "https://checkout.kubotastore.pl"
   },
+  "externalCheckout": {
+    "cmsUrl" : "https://checkout.kubotastore.pl/"
+  },
   "wordpressCms": {
     "url": "https://wordpress.kubotastore.pl",
     "pages": {
-      "home": "strona-domowa",
-      "category": "kategoria",
-      "configurable-product": "produkt"
+      "home": "strona-domowa"
     }
   }
 }
