Reverted changes in config

--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -427,7 +427,9 @@
   "wordpressCms": {
     "url": "https://wordpress.kubotastore.pl",
     "pages": {
-      "home": "strona-domowa"
+      "home": "strona-domowa",
+      "category": "kategoria",
+      "configurable-product": "produkt"
     }
   }
 }
