Enabled Multistore in config

--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -82,7 +82,7 @@
   },
   "defaultStoreCode": "",
   "storeViews": {
-    "multistore": false,
+    "multistore": true,
     "mapStoreUrlsFor": ["eur"],
     "eur": {
       "storeCode": "eur",
