Installed Google Tag Manager module

--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -372,6 +372,9 @@
   "hotjar": {
     "id": "772486"
   },
+  "googleTagManager": {
+    "id": "GTM-KLH23GK"
+  },
   "facebookPixel": {
     "id": "204195233539653"
   },
