--- a/config/maanu_config.json
+++ b/config/maanu_config.json
@@ -379,7 +379,13 @@
     "cmsUrl" : "https://checkout.maanu.pl"
   },
   "wordpressCms" : {
-    "url": "https://wp.maanu.pl/"
+    "url": "https://wp.maanu.pl/",
+    "pages": {
+      "home": "strona-domowa",
+      "category": "kategoria",
+      "configurable-product": "produkt"
+    },
+    "menus": ["informacje", "kontakt", "dla-kupujacych", "menu-glowne"]
   },
   "cms": {
     "endpoint": "https://api.pln.maanu.pl/api/ext/cms-data/cms{{type}}/{{cmsId}}",
