--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ core/resource/i18n/pt-BR.json
 core/resource/i18n/ru-RU.json
 
 src/themes/maanu-theme/
+
+src/modules/facebook-pixel
+
+src/modules/vsf-wp-rest-content
