--- a/config/dwshop_config.json
+++ b/config/dwshop_config.json
@@ -144,7 +144,7 @@
     "twoStageCaching": true,
     "optimizeShoppingCart": true,
     "category": {
-      "includeFields": [ "sort_order", "custom_attributes", "id", "*.children_data.id", "*.id", "children_count", "sku", "name", "is_active", "parent_id", "level", "url_key", "product_count", "path"],
+      "includeFields": [ "sort_order", "custom_attributes", "id", "*.children_data.id", "*.id", "children_count", "sku", "name", "is_active", "include_in_menu", "parent_id", "level", "url_key", "product_count", "path"],
       "excludeFields": [ "sgn" ],
       "categoriesRootCategorylId": 2,
       "categoriesDynamicPrefetchLevel": 2,
