--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ core/resource/i18n/pl-PL.json
 core/resource/i18n/pt-BR.json
 core/resource/i18n/ru-RU.json
 src/themes/dwshop-theme
+src/themes/dwshop-vip-theme
