--- a/config/dwshop_config.json
+++ b/config/dwshop_config.json
@@ -34,7 +34,7 @@
   },
   "elasticsearch": {
     "httpAuth": "",
-    "host": "https://api.pln.dwshop.pl/api/catalog",
+    "host": "https://api.new.dwshop.pl/api/catalog",
     "index": "vue_storefront_catalog",
     "min_score": 0.02,
     "csrTimeout": 5000,
@@ -91,7 +91,7 @@
       "name": "German Store",
       "url": "/de",
       "elasticsearch": {
-        "host": "https://api.pln.dwshop.pl/api/catalog",
+        "host": "https://api.new.dwshop.pl/api/catalog",
         "index": "vue_storefront_catalog_de"
       },
       "tax": {
@@ -118,7 +118,7 @@
       "name": "Italian Store",
       "url": "/it",
       "elasticsearch": {
-        "host": "https://api.pln.dwshop.pl/api/catalog",
+        "host": "https://api.new.dwshop.pl/api/catalog",
         "index": "vue_storefront_catalog_it"
       },
       "tax": {
@@ -236,17 +236,17 @@
     "setConfigurableProductOptions": true,
     "askBeforeRemoveProduct": true,
     "displayItemDiscounts": true,
-    "create_endpoint": "https://api.pln.dwshop.pl/api/cart/create?token={{token}}",
-    "updateitem_endpoint": "https://api.pln.dwshop.pl/api/cart/update?token={{token}}&cartId={{cartId}}",
-    "deleteitem_endpoint": "https://api.pln.dwshop.pl/api/cart/delete?token={{token}}&cartId={{cartId}}",
-    "pull_endpoint": "https://api.pln.dwshop.pl/api/cart/pull?token={{token}}&cartId={{cartId}}",
-    "totals_endpoint": "https://api.pln.dwshop.pl/api/cart/totals?token={{token}}&cartId={{cartId}}",
-    "paymentmethods_endpoint": "https://api.pln.dwshop.pl/api/cart/payment-methods?token={{token}}&cartId={{cartId}}",
-    "shippingmethods_endpoint": "https://api.pln.dwshop.pl/api/cart/shipping-methods?token={{token}}&cartId={{cartId}}",
-    "shippinginfo_endpoint": "https://api.pln.dwshop.pl/api/cart/shipping-information?token={{token}}&cartId={{cartId}}",
-    "collecttotals_endpoint": "https://api.pln.dwshop.pl/api/cart/collect-totals?token={{token}}&cartId={{cartId}}",
-    "deletecoupon_endpoint": "https://api.pln.dwshop.pl/api/cart/delete-coupon?token={{token}}&cartId={{cartId}}",
-    "applycoupon_endpoint": "https://api.pln.dwshop.pl/api/cart/apply-coupon?token={{token}}&cartId={{cartId}}&coupon={{coupon}}"
+    "create_endpoint": "https://api.new.dwshop.pl/api/cart/create?token={{token}}",
+    "updateitem_endpoint": "https://api.new.dwshop.pl/api/cart/update?token={{token}}&cartId={{cartId}}",
+    "deleteitem_endpoint": "https://api.new.dwshop.pl/api/cart/delete?token={{token}}&cartId={{cartId}}",
+    "pull_endpoint": "https://api.new.dwshop.pl/api/cart/pull?token={{token}}&cartId={{cartId}}",
+    "totals_endpoint": "https://api.new.dwshop.pl/api/cart/totals?token={{token}}&cartId={{cartId}}",
+    "paymentmethods_endpoint": "https://api.new.dwshop.pl/api/cart/payment-methods?token={{token}}&cartId={{cartId}}",
+    "shippingmethods_endpoint": "https://api.new.dwshop.pl/api/cart/shipping-methods?token={{token}}&cartId={{cartId}}",
+    "shippinginfo_endpoint": "https://api.new.dwshop.pl/api/cart/shipping-information?token={{token}}&cartId={{cartId}}",
+    "collecttotals_endpoint": "https://api.new.dwshop.pl/api/cart/collect-totals?token={{token}}&cartId={{cartId}}",
+    "deletecoupon_endpoint": "https://api.new.dwshop.pl/api/cart/delete-coupon?token={{token}}&cartId={{cartId}}",
+    "applycoupon_endpoint": "https://api.new.dwshop.pl/api/cart/apply-coupon?token={{token}}&cartId={{cartId}}&coupon={{coupon}}"
   },
   "products": {
     "useShortCatalogUrls": false,
@@ -262,7 +262,7 @@
     "clearPricesBeforePlatformSync": false,
     "waitForPlatformSync": false,
     "setupVariantByAttributeCode": true,
-    "endpoint": "https://api.pln.dwshop.pl/api/product",
+    "endpoint": "https://api.new.dwshop.pl/api/product",
     "defaultFilters": ["color", "size", "price", "erin_recommends"],
     "filterFieldMapping": {
       "category.name": "category.name.keyword"
@@ -290,7 +290,7 @@
   },
   "orders": {
     "directBackendSync": true,
-    "endpoint": "https://api.pln.dwshop.pl/api/order",
+    "endpoint": "https://api.new.dwshop.pl/api/order",
     "payment_methods_mapping": {
     },
     "offline_orders": {
@@ -322,27 +322,27 @@
     }
   },
   "reviews": {
-    "create_endpoint": "https://api.pln.dwshop.pl/api/review/create"
+    "create_endpoint": "https://api.new.dwshop.pl/api/review/create"
   },
   "users": {
     "autoRefreshTokens": true,
-    "endpoint": "https://api.pln.dwshop.pl/api/user",
-    "history_endpoint": "https://api.pln.dwshop.pl/api/user/order-history?token={{token}}",
-    "resetPassword_endpoint": "https://api.pln.dwshop.pl/api/user/reset-password",
-    "changePassword_endpoint": "https://api.pln.dwshop.pl/api/user/change-password?token={{token}}",
-    "login_endpoint": "https://api.pln.dwshop.pl/api/user/login",
-    "create_endpoint": "https://api.pln.dwshop.pl/api/user/create",
-    "me_endpoint": "https://api.pln.dwshop.pl/api/user/me?token={{token}}",
-    "refresh_endpoint": "https://api.pln.dwshop.pl/api/user/refresh"
+    "endpoint": "https://api.new.dwshop.pl/api/user",
+    "history_endpoint": "https://api.new.dwshop.pl/api/user/order-history?token={{token}}",
+    "resetPassword_endpoint": "https://api.new.dwshop.pl/api/user/reset-password",
+    "changePassword_endpoint": "https://api.new.dwshop.pl/api/user/change-password?token={{token}}",
+    "login_endpoint": "https://api.new.dwshop.pl/api/user/login",
+    "create_endpoint": "https://api.new.dwshop.pl/api/user/create",
+    "me_endpoint": "https://api.new.dwshop.pl/api/user/me?token={{token}}",
+    "refresh_endpoint": "https://api.new.dwshop.pl/api/user/refresh"
   },
   "stock": {
     "synchronize": true,
     "allowOutOfStockInCart": true,
-    "endpoint": "https://api.pln.dwshop.pl/api/stock"
+    "endpoint": "https://api.new.dwshop.pl/api/stock"
   },
   "images": {
     "useExactUrlsNoProxy": false,
-    "baseUrl": "https://api.pln.dwshop.pl/img/",
+    "baseUrl": "https://api.new.dwshop.pl/img/",
     "productPlaceholder": "/assets/placeholder.jpg"
   },
   "install": {
@@ -383,12 +383,12 @@
     "bundleAllStoreviewLanguages": true
   },
   "mailchimp": {
-    "endpoint": "https://api.pln.dwshop.pl/api/ext/mailchimp-subscribe/subscribe"
+    "endpoint": "https://api.new.dwshop.pl/api/ext/mailchimp-subscribe/subscribe"
   },
   "mailer": {
     "endpoint": {
-      "send": "https://api.pln.dwshop.pl/api/ext/mail-service/send-email",
-      "token": "https://api.pln.dwshop.pl/api/ext/mail-service/get-token"
+      "send": "https://api.new.dwshop.pl/api/ext/mail-service/send-email",
+      "token": "https://api.new.dwshop.pl/api/ext/mail-service/get-token"
     },
     "contactAddress": "contributors@vuestorefront.io",
     "sendConfirmation": true
@@ -401,8 +401,8 @@
     "id": false
   },
   "cms": {
-    "endpoint": "https://api.pln.dwshop.pl/api/ext/cms-data/cms{{type}}/{{cmsId}}",
-    "endpointIdentifier": "https://api.pln.dwshop.pl/api/ext/cms-data/cms{{type}}Identifier/{{cmsIdentifier}}/storeId/{{storeId}}"
+    "endpoint": "https://api.new.dwshop.pl/api/ext/cms-data/cms{{type}}/{{cmsId}}",
+    "endpointIdentifier": "https://api.new.dwshop.pl/api/ext/cms-data/cms{{type}}Identifier/{{cmsIdentifier}}/storeId/{{storeId}}"
   },
   "cms_block": {
     "max_count": 500
