--- a/config/flyn_config.json
+++ b/config/flyn_config.json
@@ -419,7 +419,7 @@
     "configurableChildrenStockPrefetchDynamic": false,
     "configurableChildrenStockPrefetchStaticPrefetchCount": 8,
     "filterUnavailableVariants": false,
-    "listOutOfStockProducts": false,
+    "listOutOfStockProducts": true,
     "preventConfigurableChildrenDirectAccess": true,
     "alwaysSyncPlatformPricesOver": true,
     "clearPricesBeforePlatformSync": false,
