--- a/config/flyn_config.json
+++ b/config/flyn_config.json
@@ -589,7 +589,7 @@
   "facebookPixel": {
     "id": "1652355248347788"
   },
-  "facebookSdk": {
+  "facebookJsSdk": {
     "appId": "378675779650706",
     "pageId": "609400545866822"
   },
