--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -438,6 +438,7 @@
     "url": "https://wordpress.kubotastore.pl",
     "pages": {
       "home": "strona-domowa",
+      "eur-home": "strona-domowa",
       "category": "kategoria",
       "configurable-product": "produkt"
     }
