--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -33,7 +33,7 @@
       "port": 8080
     },
     "api": {
-      "url": "http://localhost:8080"
+      "url": "https://api.pln.nago.com"
     },
     "elasticsearch": {
       "httpAuth": "",
@@ -240,17 +240,17 @@
       "askBeforeRemoveProduct": true,
       "displayItemDiscounts": true,
       "minicartCountType": "quantities",
-      "create_endpoint": "http://localhost:8080/api/cart/create?token={{token}}",
-      "updateitem_endpoint": "http://localhost:8080/api/cart/update?token={{token}}&cartId={{cartId}}",
-      "deleteitem_endpoint": "http://localhost:8080/api/cart/delete?token={{token}}&cartId={{cartId}}",
-      "pull_endpoint": "http://localhost:8080/api/cart/pull?token={{token}}&cartId={{cartId}}",
-      "totals_endpoint": "http://localhost:8080/api/cart/totals?token={{token}}&cartId={{cartId}}",
-      "paymentmethods_endpoint": "http://localhost:8080/api/cart/payment-methods?token={{token}}&cartId={{cartId}}",
-      "shippingmethods_endpoint": "http://localhost:8080/api/cart/shipping-methods?token={{token}}&cartId={{cartId}}",
-      "shippinginfo_endpoint": "http://localhost:8080/api/cart/shipping-information?token={{token}}&cartId={{cartId}}",
-      "collecttotals_endpoint": "http://localhost:8080/api/cart/collect-totals?token={{token}}&cartId={{cartId}}",
-      "deletecoupon_endpoint": "http://localhost:8080/api/cart/delete-coupon?token={{token}}&cartId={{cartId}}",
-      "applycoupon_endpoint": "http://localhost:8080/api/cart/apply-coupon?token={{token}}&cartId={{cartId}}&coupon={{coupon}}"
+      "create_endpoint": "https://api.pln.nago.com/api/cart/create?token={{token}}",
+      "updateitem_endpoint": "https://api.pln.nago.com/api/cart/update?token={{token}}&cartId={{cartId}}",
+      "deleteitem_endpoint": "https://api.pln.nago.com/api/cart/delete?token={{token}}&cartId={{cartId}}",
+      "pull_endpoint": "https://api.pln.nago.com/api/cart/pull?token={{token}}&cartId={{cartId}}",
+      "totals_endpoint": "https://api.pln.nago.com/api/cart/totals?token={{token}}&cartId={{cartId}}",
+      "paymentmethods_endpoint": "https://api.pln.nago.com/api/cart/payment-methods?token={{token}}&cartId={{cartId}}",
+      "shippingmethods_endpoint": "https://api.pln.nago.com/api/cart/shipping-methods?token={{token}}&cartId={{cartId}}",
+      "shippinginfo_endpoint": "https://api.pln.nago.com/api/cart/shipping-information?token={{token}}&cartId={{cartId}}",
+      "collecttotals_endpoint": "https://api.pln.nago.com/api/cart/collect-totals?token={{token}}&cartId={{cartId}}",
+      "deletecoupon_endpoint": "https://api.pln.nago.com/api/cart/delete-coupon?token={{token}}&cartId={{cartId}}",
+      "applycoupon_endpoint": "https://api.pln.nago.com/api/cart/apply-coupon?token={{token}}&cartId={{cartId}}&coupon={{coupon}}"
     },
     "products": {
       "useShortCatalogUrls": false,
@@ -266,7 +266,7 @@
       "clearPricesBeforePlatformSync": false,
       "waitForPlatformSync": false,
       "setupVariantByAttributeCode": true,
-      "endpoint": "http://localhost:8080/api/product",
+      "endpoint": "https://api.pln.nago.com/api/product",
       "defaultFilters": ["color", "size", "price", "erin_recommends"],
       "filterFieldMapping": {
         "category.name": "category.name.keyword"
@@ -294,7 +294,7 @@
     },
     "orders": {
       "directBackendSync": true,
-      "endpoint": "http://localhost:8080/api/order",
+      "endpoint": "https://api.pln.nago.com/api/order",
       "payment_methods_mapping": {
       },
       "offline_orders": {
@@ -326,23 +326,23 @@
       }
     },
     "reviews": {
-      "create_endpoint": "http://localhost:8080/api/review/create"
+      "create_endpoint": "https://api.pln.nago.com/api/review/create"
     },
     "users": {
       "autoRefreshTokens": true,
-      "endpoint": "http://localhost:8080/api/user",
-      "history_endpoint": "http://localhost:8080/api/user/order-history?token={{token}}",
-      "resetPassword_endpoint": "http://localhost:8080/api/user/reset-password",
-      "changePassword_endpoint": "http://localhost:8080/api/user/change-password?token={{token}}",
-      "login_endpoint": "http://localhost:8080/api/user/login",
-      "create_endpoint": "http://localhost:8080/api/user/create",
-      "me_endpoint": "http://localhost:8080/api/user/me?token={{token}}",
-      "refresh_endpoint": "http://localhost:8080/api/user/refresh"
+      "endpoint": "https://api.pln.nago.com/api/user",
+      "history_endpoint": "https://api.pln.nago.com/api/user/order-history?token={{token}}",
+      "resetPassword_endpoint": "https://api.pln.nago.com/api/user/reset-password",
+      "changePassword_endpoint": "https://api.pln.nago.com/api/user/change-password?token={{token}}",
+      "login_endpoint": "https://api.pln.nago.com/api/user/login",
+      "create_endpoint": "https://api.pln.nago.com/api/user/create",
+      "me_endpoint": "https://api.pln.nago.com/api/user/me?token={{token}}",
+      "refresh_endpoint": "https://api.pln.nago.com/api/user/refresh"
     },
     "stock": {
       "synchronize": true,
       "allowOutOfStockInCart": true,
-      "endpoint": "http://localhost:8080/api/stock"
+      "endpoint": "https://api.pln.nago.com/api/stock"
     },
     "images": {
       "useExactUrlsNoProxy": false,
@@ -387,17 +387,17 @@
       "bundleAllStoreviewLanguages": true
     },
     "mailchimp": {
-      "endpoint": "http://localhost:8080/api/ext/mailchimp-subscribe/subscribe"
+      "endpoint": "https://api.pln.nago.com/api/ext/mailchimp-subscribe/subscribe"
     },
     "mailer": {
       "endpoint": {
-        "send": "http://localhost:8080/api/ext/mail-service/send-email",
-        "token": "http://localhost:8080/api/ext/mail-service/get-token"
+        "send": "https://api.pln.nago.com/api/ext/mail-service/send-email",
+        "token": "https://api.pln.nago.com/api/ext/mail-service/get-token"
       },
       "contactAddress": "contributors@vuestorefront.io",
       "sendConfirmation": true
     },
-    "theme": "@vue-storefront/theme-default",
+    "theme": "nago-theme",
     "analytics": {
       "id": false
     },
@@ -405,8 +405,8 @@
       "id": false
     },
     "cms": {
-      "endpoint": "http://localhost:8080/api/ext/cms-data/cms{{type}}/{{cmsId}}",
-      "endpointIdentifier": "http://localhost:8080/api/ext/cms-data/cms{{type}}Identifier/{{cmsIdentifier}}/storeId/{{storeId}}"
+      "endpoint": "https://api.pln.nago.com/api/ext/cms-data/cms{{type}}/{{cmsId}}",
+      "endpointIdentifier": "https://api.pln.nago.com/api/ext/cms-data/cms{{type}}Identifier/{{cmsIdentifier}}/storeId/{{storeId}}"
     },
     "cms_block": {
       "max_count": 500
